--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "material-design-icons-iconfont": "^3.0.3",
+    "vee-validate": "^2.1.0-beta.7",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
     "vue-grid-layout": "^2.1.13",
