--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.1.0",
     "material-design-icons-iconfont": "^3.0.3",
+    "v-charts": "^1.17.10",
     "vee-validate": "^2.1.0-beta.7",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
@@ -47,6 +49,7 @@
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
