--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.1.0",
     "material-design-icons-iconfont": "^3.0.3",
     "v-charts": "^1.17.10",
+    "vchart": "^1.0.0",
     "vee-validate": "^2.1.0-beta.7",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
