MoreTaskTable && Data for config.json LYH

--- a/static/config.json
+++ b/static/config.json
@@ -1,6 +1,105 @@
 {
-    "taskid": "1001",
-    "resultCount": 278,
-    "resultChange": 452,
-    "resultTime": "2018-12-20 12:12:23"
+    "count":
+    {
+        "taskid": "1001",
+        "resultCount": 278,
+        "resultChange": 452,
+        "resultTime": "2018-12-20 12:12:23"
+    },
+    "countTable": 
+    [
+        {
+            "value": false,
+            "name": "Frozen Yogurt",
+            "calories": 159,
+            "fat": 6.0,
+            "carbs": 24,
+            "protein": 4.0,
+            "sodium": 87,
+            "calcium": "14%",
+            "iron": "1%"
+        }
+    ],
+    "row": [
+        { "日期": "8-1", "访问用户": 1523 },
+        { "日期": "8-2", "访问用户": 1223 },
+        { "日期": "8-3", "访问用户": 2123 },
+        { "日期": "8-4", "访问用户": 4123 },
+        { "日期": "8-5", "访问用户": 3123 },
+        { "日期": "8-6", "访问用户": 7123 }
+    ],
+    "desserts": [
+        {
+        "value": false,
+        "name": "Frozen Yogurt",
+        "calories": 159,
+        "fat": 6.0,
+        "carbs": 24,
+        "protein": 4.0,
+        "iron": "1%"
+        },
+        {
+        "value": false,
+        "name": "Ice cream sandwich",
+        "calories": 237,
+        "fat": 9.0,
+        "carbs": 37,
+        "protein": 4.3,
+        "iron": "1%"
+        },
+        {
+        "value": false,
+        "name": "Eclair",
+        "calories": 262,
+        "fat": 16.0,
+        "carbs": 23,
+        "protein": 6.0,
+        "iron": "7%"
+        },
+        {
+        "value": false,
+        "name": "Cupcake",
+        "calories": 305,
+        "fat": 3.7,
+        "carbs": 67,
+        "protein": 4.3,
+        "iron": "8%"
+        },
+        {
+        "value": false,
+        "name": "Gingerbread",
+        "calories": 356,
+        "fat": 16.0,
+        "carbs": 49,
+        "protein": 3.9,
+        "iron": "16%"
+        },
+        {
+        "value": false,
+        "name": "Jelly bean",
+        "calories": 375,
+        "fat": 0.0,
+        "carbs": 94,
+        "protein": 0.0,
+        "iron": "0%"
+        },
+        {
+        "value": false,
+        "name": "Lollipop",
+        "calories": 392,
+        "fat": 0.2,
+        "carbs": 98,
+        "protein": 0,
+        "iron": "2%"
+        },
+        {
+        "value": false,
+        "name": "Honeycomb",
+        "calories": 408,
+        "fat": 3.2,
+        "carbs": 87,
+        "protein": 6.5,
+        "iron": "45%"
+        }
+    ]
 }
